Update swagger + CRUD card
