# chello-be/src/controllers/card.controller.ts
@@ -1,53 +1,127 @@
 import { Request, Response } from "express";
-import { addDoc, collection, getDocs, getFirestore } from "firebase/firestore/lite";
+import {
+  addDoc,
+  collection,
+  deleteDoc,
+  doc,
+  getDoc,
+  getDocs,
+  getFirestore,
+  setDoc,
+  updateDoc,
+} from "firebase/firestore/lite";
+import { CardInterface, ReqParams } from "../interface";
 
-const index = (req: Request, res: Response) => {
-  res.send("profike index");
+const getCard = async (req: Request<ReqParams, {}, {}, {}>, res: Response) => {
+  const db = getFirestore();
+
+  const { params } = req;
+  const workspaceId = params.workspaceId;
+
+  let dataCard: CardInterface[] = [];
+  await getDocs(collection(db, "workspace", workspaceId, "card")).then(
+    (snap) => {
+      snap.docs.map((doc) => {
+        dataCard.push({ ...doc.data() });
+      });
+    }
+  );
+
+  return res.json({ cards: dataCard });
 };
 
-const getCards = async (req: Request, res: Response) => {
-    const db = getFirestore()
+const createCard = async (
+  req: Request<ReqParams, {}, CardInterface, {}>,
+  res: Response
+) => {
+  const db = getFirestore();
+  const { params } = req;
+  const workspaceId = params.workspaceId;
 
-    const val:any [] = []
-    
-    const cardCol = collection(db, 'workspace',req.params.workspace,'card');
-    
-    const cardSnapshot = await getDocs(cardCol);
-    
-    await Promise.all(
-        cardSnapshot.docs.map(async doc =>{
-        const itemCol = collection(db, 'workspace',req.params.workspace,'card',doc.id,'item');
-        
-        const itemSnapshot = await getDocs(itemCol);
-        
-        const item = itemSnapshot.docs.map(doc => doc.data());
+  const newCard: CardInterface = {
+    cardName: req.body.cardName,
+    isActived: true,
+  };
 
-        val.push({
-            cardId: doc.id,
-            cardName: doc.data().cardName,
-            isActived: doc.data().isActived,
-            items: item
-        })
-        console.log(val)
+  await addDoc(collection(db, "workspace", workspaceId, "card"), newCard);
+  return res.json(newCard).status(200);
+};
+
+const updateCard = async (
+  req: Request<ReqParams, {}, {}, {}>,
+  res: Response
+) => {
+  const db = getFirestore();
+  const { params } = req;
+  const workspaceId = params.workspaceId;
+  const cardId = params.cardId;
+
+  await setDoc(doc(db, "workspace", workspaceId, "card", cardId), {
+    ...req.body,
+  })
+    .then(() => {
+      return res.json(req.body);
     })
-    )
-    
-    return res.json(val)  
-}
+    .catch(() => {
+      return res.json({ message: "Cập nhật thất bại" });
+    });
+};
 
-const createCard = async (req: Request, res: Response) => {
-    const db = getFirestore()
-  
-    // const data: Workspace[] = []
-      
-    const newCard: any = {
-        cardName: req.body.cardName,
-        isActived: true,
-      }
-    
-    await addDoc(collection(db, 'workspace',req.params.workspace,'card'),newCard);
-    
-  
-    return res.json(newCard).status(200);
-}
-export { index, getCards, createCard };
+const getCardById = async (
+  req: Request<ReqParams, {}, {}, {}>,
+  res: Response
+) => {
+  const db = getFirestore();
+  const { params } = req;
+  const workspaceId = params.workspaceId;
+  const cardId = params.cardId;
+
+  await getDoc(doc(collection(db, "workspace", workspaceId, "card"), cardId))
+    .then((snap) => {
+      return res.json(snap.data()).status(200);
+    })
+    .catch((err) => {
+      return res.json(err.status);
+    });
+};
+
+const patchCard = async (
+  req: Request<ReqParams, {}, {}, {}>,
+  res: Response
+) => {
+  const db = getFirestore();
+  const { params } = req;
+  const workspaceId = params.workspaceId;
+  const cardId = params.cardId;
+
+  await updateDoc(
+    doc(collection(db, "workspace", workspaceId, "card"), cardId),
+    req.body
+  )
+    .then(() => {
+      return res.json({ message: "Thay đổi thành công" }).status(200);
+    })
+    .catch(() => {
+      return res.json({ message: "Thay đổi thất bại" }).status(400);
+    });
+};
+
+const deleteCard = async (
+  req: Request<ReqParams, {}, {}, {}>,
+  res: Response
+) => {
+  const db = getFirestore();
+  const { params } = req;
+  const workspaceId = params.workspaceId;
+  const cardId = params.cardId;
+
+  await deleteDoc(doc(db, "workspace", workspaceId, "card", cardId))
+    .then(() => {
+      return res.json({ message: "Xoá thành công" }).status(200);
+    })
+    .catch(() => {
+      return res.json({ message: "Xóa thất bại" }).status(400);
+    });
+};
+
+export { createCard, getCard, updateCard, deleteCard, getCardById, patchCard };
