# chello-be/src/routes/card.route.ts
@@ -2,9 +2,6 @@ import express from "express";
 let router = express.Router();
 import * as cardController from "../controllers/card.controller";
 
-router.get("/", cardController.index);
-
-// router.get("/workspace/:id/card", cardController.index);
-
+router.get("/", cardController.getCard);
 
 export { router as cardRouter };
